# gl_game

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Readme.md  format.py  vcpkg.json
.github/workflows/: ci.yml
assets/shaders/: sprite.frag  sprite.vert
assets/textures/: spritesheet.atlas  spritesheet_atlas.json
assets/tilemaps/: demo.tmx  demo2.tmx
engine/: CMakeLists.txt  old-CMakeLists.txt
engine/include/: asset-manager.hpp  cr.h  defs.hpp  engine.hpp  font.hpp  host-data.hpp  input.hpp  mixer.hpp  renderer.hpp  shared-data.hpp  sprite-batch.hpp  spritesheet.hpp  tilemap.hpp
engine/lib/glad/: CMakeLists.txt
engine/modules/input/: CMakeLists.txt
engine/src/: engine.cpp  font.cpp  input.cpp  main.cpp  mixer.cpp  renderer.cpp  sprite-batch.cpp  spritesheet.cpp  texture.cpp  tilemap.cpp  window.cpp
game/: CMakeLists.txt
game/include/: components.hpp  game.hpp  prefabs.hpp  resource-paths.hpp  tilemap.hpp
game/include/plugins/: camera.hpp  enemy.hpp  graphics.hpp  map.hpp  physics.hpp  player.hpp  plugin.hpp  transform.hpp
game/modules/render/: CMakeLists.txt
game/src/: game.cpp  prefabs.cpp  tilemap.cpp
game/src/plugins/: camera.cpp  enemy.cpp  graphics.cpp  map.cpp  physics.cpp  player.cpp  transform.cpp
include/: app.hpp  components.hpp  debug.hpp  defs.hpp  input.hpp  main.hpp  net_manager.hpp  renderer.hpp  sprite-batch.hpp  texture.hpp  tilemap.hpp  window.hpp
lib/glad/include/: glad.h
lib/glad/src/: glad.c
scripts/: sprite_atlasser.py
src/: app.cpp  debug.cpp  input.cpp  main.cpp  net_manager.cpp  renderer.cpp  sprite-batch.cpp  texture.cpp  tilemap.cpp
